# FDF

./: CMakeLists.txt  Makefile  README.md  a.fdf  a.sh  f  valgrind-out.txt
include/: bmp_writer.h  error.h  fdf.h  keys.h
includes/: error.h  fdf.h  get_next_line.h  libft.h
lib/ft/include/: libft.h
lib/ft/src/: ft_atoi_error.c  ft_strchr.c  ft_strlen.c  get_next_line.c  get_next_line_utils.c
libraries/libft/: Makefile
libraries/libft/includes/: get_next_line.h  libft.h
libraries/libft/sources/get_next_line/: get_next_line.c  get_next_line_utils.c
resources/maps/: 42.fdf  elem-col.fdf
sources/: Calculations.c  Drawing.c  Helpers.c  Init.c  Rotations.c  getValues.c  keyboardEvents.c  main.c  minilibxEvents.c  mouseEvent.c  readFile.c
src/: Drawing.c  Helpers.c  Init.c  bmpWriter.c  getValues.c  keyboardEvents.c  main.c  minilibxEvents.c  mouseEvent.c  readFile.c  tags
